{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 218,
  "lineage": "2fd5239a-c245-9aee-a6cd-47b78fa6e195",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:internet-gateway/igw-0def8abc0fa658cb8",
            "id": "igw-0def8abc0fa658cb8",
            "owner_id": "641017921986",
            "tags": {
              "Name": "three-tier-igw"
            },
            "tags_all": {
              "Name": "three-tier-igw"
            },
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:641017921986:loadbalancer/app/three-tier-web-alb/05a730786ae5f8e4",
            "arn_suffix": "app/three-tier-web-alb/05a730786ae5f8e4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-web-alb-1236714739.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:641017921986:loadbalancer/app/three-tier-web-alb/05a730786ae5f8e4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0623a585cd6f3238d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051ccae8bfa7581df"
              },
              {
                "subnet_id": "subnet-0e95b55d7e23c8769"
              }
            ],
            "subnets": [
              "subnet-051ccae8bfa7581df",
              "subnet-0e95b55d7e23c8769"
            ],
            "tags": {
              "Name": "three-tier-web-alb"
            },
            "tags_all": {
              "Name": "three-tier-web-alb"
            },
            "vpc_id": "vpc-0d7add60776dca91b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_lb_sg",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:641017921986:listener/app/three-tier-web-alb/05a730786ae5f8e4/07ebf3c499066fd0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:641017921986:targetgroup/three-tier-web-tg/588c7780734b7d6a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:641017921986:listener/app/three-tier-web-alb/05a730786ae5f8e4/07ebf3c499066fd0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:641017921986:loadbalancer/app/three-tier-web-alb/05a730786ae5f8e4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.web_alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.web_lb_sg",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:641017921986:targetgroup/three-tier-web-tg/588c7780734b7d6a",
            "arn_suffix": "targetgroup/three-tier-web-tg/588c7780734b7d6a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:641017921986:targetgroup/three-tier-web-tg/588c7780734b7d6a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-web-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "three-tier-web-tg"
            },
            "tags_all": {
              "Name": "three-tier-web-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:route-table/rtb-000f34be0c55607ec",
            "id": "rtb-000f34be0c55607ec",
            "owner_id": "641017921986",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "three-tier-private-app-rt"
            },
            "tags_all": {
              "Name": "three-tier-private-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:route-table/rtb-0e71fff08b6baddd6",
            "id": "rtb-0e71fff08b6baddd6",
            "owner_id": "641017921986",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "three-tier-private-db-rt"
            },
            "tags_all": {
              "Name": "three-tier-private-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:route-table/rtb-07d52f8fc2fa09947",
            "id": "rtb-07d52f8fc2fa09947",
            "owner_id": "641017921986",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0def8abc0fa658cb8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-public-rt"
            },
            "tags_all": {
              "Name": "three-tier-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a380c0ec7ee23fa",
            "route_table_id": "rtb-000f34be0c55607ec",
            "subnet_id": "subnet-0ad147c3dcb25e18c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_app",
            "aws_subnet.private_app_az1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08274c1f204a3430a",
            "route_table_id": "rtb-000f34be0c55607ec",
            "subnet_id": "subnet-04dc1bb1f02e7e044"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_app",
            "aws_subnet.private_app_az2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df058446d2d8a0be",
            "route_table_id": "rtb-0e71fff08b6baddd6",
            "subnet_id": "subnet-02c0271387d57772c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db_az1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a1c8410378b3543",
            "route_table_id": "rtb-0e71fff08b6baddd6",
            "subnet_id": "subnet-0551ab3a9a547a0a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db_az2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046cdfb2bf3b0ffb8",
            "route_table_id": "rtb-07d52f8fc2fa09947",
            "subnet_id": "subnet-051ccae8bfa7581df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_az1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc2f30d5a9c13574",
            "route_table_id": "rtb-07d52f8fc2fa09947",
            "subnet_id": "subnet-0e95b55d7e23c8769"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_az2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:security-group/sg-008e1c2bf44c4d1cc",
            "description": "Allow traffic from Web Tier SG to App Tier EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008e1c2bf44c4d1cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ddf987e898fa2ae0"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "three-tier-app-sg",
            "name_prefix": "",
            "owner_id": "641017921986",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-app-sg"
            },
            "tags_all": {
              "Name": "three-tier-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_lb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:security-group/sg-037f7a6f217acce5c",
            "description": "Allow traffic from App Tier SG to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037f7a6f217acce5c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008e1c2bf44c4d1cc"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "three-tier-db-sg",
            "name_prefix": "",
            "owner_id": "641017921986",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-db-sg"
            },
            "tags_all": {
              "Name": "three-tier-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.web_lb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:security-group/sg-0623a585cd6f3238d",
            "description": "Allow HTTP/HTTPS for Web Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0623a585cd6f3238d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-web-lb-sg",
            "name_prefix": "",
            "owner_id": "641017921986",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-web-lb-sg"
            },
            "tags_all": {
              "Name": "three-tier-web-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:security-group/sg-0ddf987e898fa2ae0",
            "description": "Allow HTTP/HTTPS inbound traffic for Web Tier EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddf987e898fa2ae0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0623a585cd6f3238d"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0623a585cd6f3238d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-web-sg",
            "name_prefix": "",
            "owner_id": "641017921986",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-web-sg"
            },
            "tags_all": {
              "Name": "three-tier-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_lb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:subnet/subnet-0ad147c3dcb25e18c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad147c3dcb25e18c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641017921986",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-private-app-subnet-az1"
            },
            "tags_all": {
              "Name": "three-tier-private-app-subnet-az1"
            },
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:subnet/subnet-04dc1bb1f02e7e044",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dc1bb1f02e7e044",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641017921986",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-private-app-subnet-az2"
            },
            "tags_all": {
              "Name": "three-tier-private-app-subnet-az2"
            },
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:subnet/subnet-02c0271387d57772c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c0271387d57772c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641017921986",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-private-db-subnet-az1"
            },
            "tags_all": {
              "Name": "three-tier-private-db-subnet-az1"
            },
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:subnet/subnet-0551ab3a9a547a0a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0551ab3a9a547a0a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641017921986",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-private-db-subnet-az2"
            },
            "tags_all": {
              "Name": "three-tier-private-db-subnet-az2"
            },
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:subnet/subnet-051ccae8bfa7581df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051ccae8bfa7581df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "641017921986",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-public-subnet-az1"
            },
            "tags_all": {
              "Name": "three-tier-public-subnet-az1"
            },
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:subnet/subnet-0e95b55d7e23c8769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e95b55d7e23c8769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "641017921986",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-public-subnet-az2"
            },
            "tags_all": {
              "Name": "three-tier-public-subnet-az2"
            },
            "vpc_id": "vpc-0d7add60776dca91b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641017921986:vpc/vpc-0d7add60776dca91b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e78c88f6f7b839d2",
            "default_route_table_id": "rtb-0d5cf968cb667695b",
            "default_security_group_id": "sg-017a9d84afa35c17a",
            "dhcp_options_id": "dopt-0551292b41ba8e135",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d7add60776dca91b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5cf968cb667695b",
            "owner_id": "641017921986",
            "tags": {
              "Name": "three-tier-vpc"
            },
            "tags_all": {
              "Name": "three-tier-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}